@@ -1,6 +1,10 @@
 4.1.1
 ---------
 - The application now copies /usr/bin/hostid into the initramfs
+- The application will now use the zpool.cache file that's on the system
+  at the time of creation if it finds one.
+- The hostid of the generating system will be stored in /etc/hostid on the
+  initramfs.
 
 4.1.0
 ---------
